[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ClickerPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/roboto.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/bag_200.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.635294, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.478431, 0.545098, 1 )
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0745098, 0.517647, 0.588235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.478431, 0.545098, 1 )
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0666667, 0.478431, 0.545098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0901961, 0.635294, 0.721569, 1 )
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0
shadow_size = 2

[node name="ClickerPanel" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 409.6
margin_bottom = 600.0

[node name="Background" type="ColorRect" parent="Control"]
visible = false
margin_right = 409.6
margin_bottom = 600.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="Rows" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -111.0
margin_bottom = 111.0
custom_constants/separation = 16

[node name="LabelsColumn" type="HBoxContainer" parent="Control/Rows"]
margin_right = 409.0
margin_bottom = 19.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control/Rows/LabelsColumn"]
margin_left = 75.0
margin_right = 75.0
margin_bottom = 19.0
size_flags_vertical = 3

[node name="Counter" type="Label" parent="Control/Rows/LabelsColumn"]
margin_left = 79.0
margin_right = 158.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Doações: 0"

[node name="CounterPerSecond" type="Label" parent="Control/Rows/LabelsColumn"]
margin_left = 162.0
margin_right = 333.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Doações por segundo: 0"
align = 2

[node name="ButtonColumn" type="HBoxContainer" parent="Control/Rows"]
margin_top = 35.0
margin_right = 409.0
margin_bottom = 239.0
alignment = 1

[node name="Button" type="Button" parent="Control/Rows/ButtonColumn"]
margin_left = 102.0
margin_right = 306.0
margin_bottom = 204.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 3 )
[connection signal="pressed" from="Control/Rows/ButtonColumn/Button" to="." method="_on_Button_pressed"]
